office-kubernetes/kustomize/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
  selector:
    app: sonarr
