office-kubernetes/kustomize/media/sonarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
  - name: web
    namespace: gateway-system
  hostnames:
    - "sonarr.k8s.local-k8s.tech"
  rules:
    - backendRefs:
      - name: sonarr
        port: 80
